classDiagram
  direction LR
  %% flet-toastify generated architecture diagrams: classes

  class CardVisual {
    +float opacity
    +float scale
    +ft.Offset offset
    +ft.Animation animate_opacity
    +ft.Animation animate_scale
    +ft.Animation animate_offset
  }

  class ProgressVisual {
    +float width
    +int height
    +ft.ColorValue color
    +ft.Animation animate
  }

  class Toast {
    +str | ft.Control content
    +ToastType type
    +int duration_ms
    +ToastPhase phase
    +str id
    +ToastStyle? style
    +bool paused
    +int? remaining_ms
    +with_phase(phase)
    +with_pause(remaining_ms)
    +with_resume()
  }

  class Toasts {
    +show(content)
    +info(content)
    +success(content)
    +warning(content)
    +error(content)
    +dismiss(toast_id)
    +pause(toast_id)
    +resume(toast_id)
    +... 1 more methods
  }

  class ToastStyle {
    +int height
    +int width
    +int spacing
    +int border_radius
    +int padding
    +ft.AnimationCurve position_curve
    +int in_duration
    +ft.Offset in_offset
    +ft.AnimationCurve in_offset_curve
    +float in_opacity
    +ft.AnimationCurve in_opacity_curve
    +float in_scale
    +ft.AnimationCurve in_scale_curve
    +int out_duration
    +ft.Offset out_offset
    +ft.AnimationCurve out_offset_curve
    +float out_opacity
    +ft.AnimationCurve out_opacity_curve
    +float out_scale
    +ft.AnimationCurve out_scale_curve
    +bool show_progress
    +int progress_height
    +dict~ToastType, ft.ColorValue~ bgcolors
    +dict~ToastType, ft.IconData~ icons
    +dict~ToastType, ft.ColorValue~ icon_colors
    +dict~ToastType, ft.ColorValue~ text_colors
    +dict~ToastType, ft.ColorValue~ progress_colors
    +bgcolor_for(type)
    +icon_for(type)
    +icon_color_for(type)
    +text_color_for(type)
    +progress_color_for(type)
  }

  class Position {
    +Any TOP_LEFT
    +Any TOP_CENTER
    +Any TOP_RIGHT
    +Any BOTTOM_LEFT
    +Any BOTTOM_CENTER
    +Any BOTTOM_RIGHT
  }

  class ToastPhase {
    +Any ENTERING
    +Any VISIBLE
    +Any LEAVING
  }

  class ToastType {
    +Any INFO
    +Any SUCCESS
    +Any WARNING
    +Any ERROR
  }

  Toast ..> ToastPhase
  Toast ..> ToastStyle
  Toast ..> ToastType
  ToastStyle ..> Toast
  ToastStyle ..> ToastType
  Toasts ..> Toast
  Toasts ..> ToastPhase
  Toasts ..> ToastStyle
